build: remove unused plugins; do less in the os-jpackage files